reformed/app.k8.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reformed-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: reformed-server
      app.kubernetes.io/name: reformed
  template:
    metadata:
      name: reformed
      namespace: default
      labels:
        app.kubernetes.io/instance: reformed-server
        app.kubernetes.io/name: reformed
    spec:
      containers:
        - image: ghcr.io/davidlougheed/reformed:sha-eb370dc
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /api/v1/formats
              port: http
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: reformed
          ports:
          - containerPort: 8000
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /api/v1/formats
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: reformed-service
  namespace: default
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/instance: reformed-server
    app.kubernetes.io/name: reformed
